NAS-116715: Fix misaligned table columns

--- a/src/app/pages/datasets/components/dataset-node/dataset-node.component.scss
+++ b/src/app/pages/datasets/components/dataset-node/dataset-node.component.scss
@@ -13,6 +13,9 @@
   @include grid-row();
   align-items: center;
 
+  // Override default fraction based values to avoid misaligned columns
+  grid-template-columns: auto 150px 150px 150px;
+
   .cell {
     align-items: center;
     display: inline-flex;
