--- a/src/assets/styles/mixins/grid.scss
+++ b/src/assets/styles/mixins/grid.scss
@@ -7,4 +7,5 @@
     minmax(100px, 1fr)
     minmax(100px, 1fr);
   min-width: fit-content;
+  width: 100%;
 }
